--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#00b193" />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="library.js"></script>
     <script defer src="main.js"></script>
   </head>
   <body>
+    <div id="intre_window"><p>Click To Enter Full Screen Mod</p></div>
     <input type="file" id="img_input" />
     <div id="upload_imagge"><p class="bl">Upload Image</p></div>
     <div id="s_contaner">
@@ -40,12 +41,12 @@
     <div id="size_crop_button">
       <div class=" sst">
         <div id="set_size" class="bl">
-          <p class="bl" id="file_size_text">File Size</p>
+          <p id="file_size_text">File Size</p>
           <input type="number" id="img_size_input" placeholder="512" />
           <p id="inkb">kb</p>
         </div>
       </div>
-      <div id="crap_btn"><p class="bl">crop</p></div>
+      <div id="crap_btn"><p class="bl">Crop</p></div>
     </div>
     <div id="pvu_btn"><p class="bl">Preview</p></div>
   </body>
