--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script defer src="main.js"></script>
   </head>
   <body>
-    <div id="intre_window"><p>Click To Enter Full Screen Mod</p></div>
     <input type="file" id="img_input" />
     <div id="upload_imagge"><p class="bl">Upload Image</p></div>
     <div id="s_contaner">
@@ -38,7 +37,7 @@
       <div id="img_resize"></div>
       <div id="download_btn"><p class="bl">Download</p></div>
     </div>
-    <div id="size_crop_button">
+    <div id="size_img_selection_button">
       <div class=" sst">
         <div id="set_size" class="bl">
           <p id="file_size_text">File Size</p>
@@ -46,8 +45,14 @@
           <p id="inkb">kb</p>
         </div>
       </div>
-      <div id="crap_btn"><p class="bl">Crop</p></div>
+      <div id="img_selection" class="bl">
+        <div class="selection_text">Square</div>
+        <div id="selection_btn" class=""><div class="dot"></div></div>
+      </div>
     </div>
-    <div id="pvu_btn"><p class="bl">Preview</p></div>
+    <div id="pre_crop">
+      <div id="crap_btn"><p class="bl">Crop</p></div>
+      <div id="pvu_btn"><p class="bl">Preview</p></div>
+    </div>
   </body>
 </html>
