--- a/index.html
+++ b/index.html
@@ -54,5 +54,12 @@
       <div id="crap_btn"><p class="bl">Crop</p></div>
       <div id="pvu_btn"><p class="bl">Preview</p></div>
     </div>
+    <div id="instraction">
+      <section>
+        <h1>?</h1>
+        <i>You haven't finished your woek!</i>
+        <span><p id="i_know">OK</p></span>
+      </section>
+    </div>
   </body>
 </html>
