--- a/index.html
+++ b/index.html
@@ -40,18 +40,23 @@
         <div class="sst">
           <div id="set_size" class="bl">
             <p id="file_size_text">File Size</p>
-            <input type="number" id="img_size_input" placeholder="512" value="512"/>
+            <input
+              type="number"
+              id="img_size_input"
+              placeholder="512"
+              value="512"
+            />
             <p id="inkb">kb</p>
           </div>
         </div>
         <div id="img_selection">
           <div class="inputs_box bl">
             <div class="text">W:</div>
-            <input type="number" id="input_w">
+            <input type="number" id="input_w" />
           </div>
           <div class="inputs_box bl">
             <div class="text">H:</div>
-            <input type="number" id="input_h">
+            <input type="number" id="input_h" />
           </div>
         </div>
       </div>
