--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer src="main.js"></script>
   </head>
   <body>
-    <input type="file" id="img_input" accept=".jpg,.jpeg,.gif,.png" />
+    <input type="file" id="img_input" accept=".jpg,.jpeg,.gif,.png" multiple />
     <div id="upload_imagge"><p class="bl">Upload Image</p></div>
     <div id="s_contaner">
       <div id="selector">
